<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tea Timer</string>
    <string name="app_short_name">Tea Timer</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="steeptime"><b><u>\u0020 \u0020 Steep Time \u0020 \u0020</u></b></string>
    <string name="steeptemp"><![CDATA[<b>Steep Temp:</b>]]></string>
    <string name="teadescription"><b><u>\u0020 \u0020 Description \u0020 \u0020</u></b></string>
    <string name="teatype"><![CDATA[<b>Tea Type:</b>]]></string>
    <string name="selecttea">Select Tea</string>
    <string name="timer">Timer</string>
    <string name="alarm_sound">Alarm Sound</string>
    <string name="alarm_heading">Choose Alarm Sound</string>
    <string name="alarm_cancel_btn">Cancel</string>
    <string name="alarm_save_btn">Save</string>
    <string name="tea_time">"Tea Time!"</string>
    <string name="menu_about">About</string>
    <string name="menu_alarm">Choose Alarm Sound</string>
    <string name="menu_settings">Settings</string>
    <string name="about_heading">About Tea Timer</string>
    <string name="about_text">A simple tea timer.</string>
    <string name="about_code_copyright">Copyright \u00a9 2017 Ken Harpster</string>
    <string name="about_license">Tea Timer is free software, you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation.</string>
    <string name="about_url">Visit: http://www.bitinc.biz</string>
    <string name="about_version">Version: %1$s</string>
    <string name="settings_heading">Settings</string>
    <string name="settings_text">This is the settings page. This text simply serves as a place holder</string>
</resources>
