<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/about_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15sp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:isScrollContainer="true"
        android:scrollbars="vertical">
        <ImageView
            android:src="@drawable/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginEnd="15sp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:text="@string/app_name"
                android:textStyle="bold"
                android:textColor="@color/about_text"
                android:textSize="14.0sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/app_version"
                android:textColor="@color/about_text"
                android:textSize="11.0sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/about_text"
                android:textColor="@color/about_text"
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp" />
            <TextView
                android:text="@string/about_code_copyright"
                android:textColor="@color/about_text"
                android:textSize="12.0sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp" />
            <TextView
                android:text="@string/about_license"
                android:textColor="@color/about_text"
                android:textSize="12.0sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp" />
            <TextView
                android:text="@string/about_url"
                android:textColor="@color/about_text"
                android:textSize="12.0sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12sp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>